Implemented metrics
